# blitgin

./: .editorconfig  .gitignore  Cargo.toml  README.md  blitgin-make.bat  blitgin-make.sh
.cargo/: config
harness/: package-lock.json  package.json  server.js
harness/public/: blitgin.js  blitgin.wasm  blitgin_bg.wasm  index.html
src/: lib.rs
src/asset/: enemy.rs  mod.rs  player.rs  render_object.rs
src/core/: error.rs  input.rs  mod.rs  primitive.rs
tests/: web.rs
