[package]
name = "blitgin"
version = "0.1.0"
authors = ["adamyork <adamyork@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.51", features = ['console'] }

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true