[package]
name = "blitgin"
version = "0.1.0"
authors = ["adamyork <adamyork@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.6"
js-sys = "0.3.51"
log = "0.4"
futures = "0.3.15"
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = { version = "0.1", optional = true}

[dependencies.web-sys]
version = "0.3.51"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
    "ImageBitmap"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib", "rlib"]

# Use release mostly release settings
[profile.dev]
opt-level = "s"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
lto = true

[profile.release]
opt-level = "s"
lto = true
debug = true